mol and molDB classes now are: Mol and MolDB

--- a/scripts/rdkitDraw.ipynb
+++ b/scripts/rdkitDraw.ipynb
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "m = mol.mol(InChI=inchi)\n",
+    "m = mol.Mol(InChI=inchi)\n",
     "m.mol"
    ]
   },
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "m = mol.mol(InChI=inchi)\n",
+    "m = mol.Mol(InChI=inchi)\n",
     "m.mol"
    ]
   },
