--- a/scripts/rdkitDraw.ipynb
+++ b/scripts/rdkitDraw.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mol\n",
+    "import mollib\n",
     "import rdkit.Chem as Chem\n",
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "from rdkit.Chem.Draw.MolDrawing import MolDrawing, DrawingOptions\n",
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "m = mol.mol(smile=smile)\n",
+    "m = mollib.mol(smile=smile)\n",
     "m.mol"
    ]
   },
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "m = mol.mol(InChI=inchi)\n",
+    "m = mollib.mol(InChI=inchi)\n",
     "m.mol"
    ]
   },
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "m = mol.mol(InChI=inchi)\n",
+    "m = mollib.mol(InChI=inchi)\n",
     "m.mol"
    ]
   },
